[UPDATE]:cambios a pagina principal/se cambio el estilo de la pagina principal de docusaurus a un estilo acorde a los patrones de diseño

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,30 +1,24 @@
-/**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
- * work well for content-centric websites.
- */
-
-/* You can override the default Infima variables here. */
+/* Variables globales para el modo claro */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-color-primary: #000000; /* Color principal para modo claro */
+  --ifm-color-primary-dark: #4747ee; /* Color primario oscuro para modo claro */
+  --ifm-color-primary-darker: #071417; /* Color más oscuro para modo claro */
+  --ifm-color-primary-darkest: #000000; /* El color más oscuro para modo claro */
+  --ifm-color-primary-light: #056bab; /* Color más claro para modo claro */
+  --ifm-color-primary-lighter: #359962; /* Un color intermedio claro para modo claro */
+  --ifm-color-primary-lightest: #f6fafd; /* Fondo más claro para modo claro */
+  --ifm-code-font-size: 95%; /* Tamaño de fuente para el código */
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1); /* Fondo para las líneas de código resaltadas en modo claro */
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
+/* Variables globales para el modo oscuro */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #000000; /* Color principal para modo oscuro */
+  --ifm-color-primary-dark: #73dc7a; /* Color primario oscuro para modo oscuro */
+  --ifm-color-primary-darker: #444141; /* Color más oscuro para modo oscuro */
+  --ifm-color-primary-darkest: #414442; /* El color más oscuro para modo oscuro */
+  --ifm-color-primary-light: #29d5b0; /* Color más claro para modo oscuro */
+  --ifm-color-primary-lighter: #131313; /* Un color intermedio oscuro para modo oscuro */
+  --ifm-color-primary-lightest: #354949; /* Fondo más claro para modo oscuro */
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3); /* Fondo para las líneas de código resaltadas en modo oscuro */
 }
